# hash_kitten

./: Cargo.toml  README.md  kitten.out  kitten.test
src/: funcs.rs  lib.rs  main.rs
