[package]
name = "hashkitten"
version = "0.2.0"
edition = "2021"
description = "A purrfect hashing companion"
license = "MIT"
repository = "https://github.com/diogogomesaraujo/hash_kitten"
categories = ["command-line-utilities", "cryptography"]
keywords = ["hash", "SHA256", "fun", "command-line", "kitten"]
readme = "README.md"

[dependencies]

[[bin]]
name = "hashkitten"
path = "src/main.rs"
