[package]
name = "hashkitten"
version = "1.0.0"
edition = "2021"
description = "A purrfect hashing companion"
license = "MIT"
repository = "https://github.com/diogogomesaraujo/hash_kitten"
categories = ["command-line-utilities", "cryptography"]
keywords = ["hash", "SHA256", "fun", "command-line", "kitten"]
readme = "README.md"

[dependencies]

[lib]
name = "hashkitten"
path = "src/lib.rs"

[[bin]]
name = "hashkitten"
path = "src/main.rs"
